Messing with the links and fixed the pictures wraps
Made the box wraps on the pictures white and tried to clean up the links
a bit. I thought the green background was better so I left it on that
one. Feel free to change it back.

--- a/css/projectStyle.css
+++ b/css/projectStyle.css
@@ -107,8 +107,8 @@ html {
 }
 body {
   /*background: #FFF;*/
-  /*background-image: url(../images/Sea-green-blur-background1.jpg);*/
-  background-image: url(../images/Light-Blue-blur-background1.jpg);
+  background-image: url(../images/Sea-green-blur-background1.jpg);
+  /*background-image: url(../images/Light-Blue-blur-background1.jpg);*/
   color: #494949;
   font-family: sans-serif;
   height: 100%;
@@ -129,8 +129,12 @@ header {
   border-bottom: solid 1px #CCC;
   height: 100px;
   margin: 0 0 10px;
+  position: relative;
 }
   header h1 {
+    line-height: 100px;
+  }
+  header h2 {
     line-height: 100px;
   }
 
@@ -138,7 +142,7 @@ header {
                   ¡NAV
   \*------------------------------------*/
   nav {
-    display: -webkit-box;
+    /*display: -webkit-box;
     display: -webkit-flex;
     display: -moz-flex;
     display: -ms-flexbox;
@@ -147,17 +151,18 @@ header {
     -ms-flex-pack: justify;
     -webkit-justify-content: space-between;
     -moz-justify-content: space-between;
-    justify-content: space-between;
+    justify-content: space-between;*/
     background-color: #ADD8E6;
   }
     nav a {
       border: solid 1px;
-      color: #000000;
+      color: #494949;
       display: inline-block;
       float: left;
-      margin: 0 175px 0 0;
+      margin: 0 5px 0 0;
       padding: 5px 10px;
       text-decoration: none;
+      background-color:#ADD8E6
     }
       nav a:hover, nav a:active {
         background-color: #434C50;
@@ -168,7 +173,7 @@ header {
       }
 
       nav a:visited{
-        color: #551A8B;
+        /*color: #551A8B;*/
       }
 
   /*------------------------------------*\
